[workspace]
members = ["core", "tokio", "async", "cli", "cli/tokio", "cli/async"]
resolver = "2"

[workspace.package]
version = "0.3.2"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/katyo/gpiod-rs"
homepage = "https://github.com/katyo/gpiod-rs"

[workspace.dependencies]
libc = "0.2"
futures-lite = "2"
futures-util = "0.3"
async-io = "2"
async-fs = "2"
blocking = "1"
smol = "2"
smol-potat = "1"
anyhow = "1"
clap_complete = "4"
clap_mangen = "0.2"

[workspace.dependencies.nix]
version = "0.26"
default-features = false

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
default-features = false

[workspace.dependencies.gpiod-core]
path = "core"
version = "0.3"
default-features = false

[workspace.dependencies.gpiod]
path = ""
version = "0.3"
default-features = false

[workspace.dependencies.gpiod-cli]
path = "cli"
version = "0.3"
default-features = false

[workspace.dependencies.tokio-gpiod]
path = "tokio"
version = "0.3"
default-features = false

[workspace.dependencies.async-gpiod]
path = "async"
version = "0.3"
default-features = false

[package]
name = "gpiod"
description = "Linux GPIO character device interfacing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]

[dependencies.gpiod-core]
workspace = true
default-features = false

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
